--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -1,43 +1,43 @@
 # === Errors ===
-errors.special.similar_command=Meintest du `?0`? 
+errors.special.similar_command=Meintest du `$0`?\u0020
 errors.unknown.title=Unbekannter Fehler
 errors.unknown.description=Ein unbekannter Fehler ist aufgetreten.
 errors.unknown_command.title=Unbekannter Befehl
-errors.unknown_command.description=Der Befehl `?0` existiert nicht. ?1Nutze `!list` um eine Liste aller Befehle zu erhalten.
+errors.unknown_command.description=Der Befehl `$0` existiert nicht. $1Nutze `!list` um eine Liste aller Befehle zu erhalten.
 errors.command_unavailable.title=Befehl nicht verfügbar
-errors.command_unavailable.description=Der Befehl `?0` ist derzeit nicht verfügbar.
+errors.command_unavailable.description=Der Befehl `$0` ist derzeit nicht verfügbar.
 errors.command_missing_permissions.title=Fehlende Berechtigungen
-errors.command_missing_permissions.description=Du hast nicht die erforderlichen Berechtigungen, um den Befehl `?0` auszuführen.
+errors.command_missing_permissions.description=Du hast nicht die erforderlichen Berechtigungen, um den Befehl `$0` auszuführen.
 errors.subcommand_required.title=Unterbefehl erforderlich
-errors.subcommand_required.description=Der Befehl `?0` benötigt einen Unterbefehl. Nutze `!help command ?0` um eine Liste aller Unterbefehle zu erhalten.
+errors.subcommand_required.description=Der Befehl `$0` benötigt einen Unterbefehl. Nutze `!help command $0` um eine Liste aller Unterbefehle zu erhalten.
 errors.subcommand_unknown.title=Unbekannter Unterbefehl
-errors.subcommand_unknown.description=Der Unterbefehl `?0` existiert nicht für den Befehl `?1`. ?2Nutze `!help command ?1` um eine Liste aller Unterbefehle zu erhalten.
+errors.subcommand_unknown.description=Der Unterbefehl `$0` existiert nicht für den Befehl `$1`. $2Nutze `!help command $1` um eine Liste aller Unterbefehle zu erhalten.
 errors.subcommand_unavailable.title=Unterbefehl nicht verfügbar
-errors.subcommand_unavailable.description=Der Unterbefehl `?0` für den Befehl `?1` ist derzeit nicht verfügbar.
+errors.subcommand_unavailable.description=Der Unterbefehl `$0` für den Befehl `$1` ist derzeit nicht verfügbar.
 errors.subcommand_missing_permissions.title=Fehlende Berechtigungen
-errors.subcommand_missing_permissions.description=Du hast nicht die erforderlichen Berechtigungen, um den Unterbefehl `?0` für den Befehl `?1` auszuführen.
+errors.subcommand_missing_permissions.description=Du hast nicht die erforderlichen Berechtigungen, um den Unterbefehl `$0` für den Befehl `$1` auszuführen.
 errors.command_arguments_invalid_order.title=Ungültige Argumentenreihenfolge
 errors.command_arguments_invalid_order.description=Argumente, die als Schlüssel-Wert-Paar übergeben werden, müssen entweder ausschließlich oder am Ende jeder Argumentliste übergeben werden.
 errors.command_arguments_too_many.title=Zu viele Argumente
-errors.command_arguments_too_many.description=Der Befehl `?0` akzeptiert nicht mehr als ?1 Argumente.
+errors.command_arguments_too_many.description=Der Befehl `$0` akzeptiert nicht mehr als $1 Argumente.
 errors.subcommand_arguments_too_many.title=Zu viele Argumente
-errors.subcommand_arguments_too_many.description=Der Unterbefehl `?0` des Befehls `?1` akzeptiert nicht mehr als ?2 Argumente.
+errors.subcommand_arguments_too_many.description=Der Unterbefehl `$0` des Befehls `$1` akzeptiert nicht mehr als $2 Argumente.
 errors.command_unknown_argument.title=Unbekanntes Argument
-errors.command_unknown_argument.description=Das Argument `?0` existiert für den Befehl `?1` nicht.
+errors.command_unknown_argument.description=Das Argument `$0` existiert für den Befehl `$1` nicht.
 errors.subcommand_unknown_argument.title=Unbekanntes Argument
-errors.subcommand_unknown_argument.description=Das Argument `?0` existiert für den Unterbefehl `?1` des Befehls `?2` nicht.
+errors.subcommand_unknown_argument.description=Das Argument `$0` existiert für den Unterbefehl `$1` des Befehls `$2` nicht.
 errors.command_duplicate_argument.title=Argument mehrfach definiert
-errors.command_duplicate_argument.description=Das Argument `?0` ist für den Befehl `?1` mehrfach definiert.
+errors.command_duplicate_argument.description=Das Argument `$0` ist für den Befehl `$1` mehrfach definiert.
 errors.subcommand_duplicate_argument.title=Argument mehrfach definiert
-errors.subcommand_duplicate_argument.description=Das Argument `?0` ist für den Unterbefehl `?1` des Befehls `?2` mehrfach definiert.
+errors.subcommand_duplicate_argument.description=Das Argument `$0` ist für den Unterbefehl `$1` des Befehls `$2` mehrfach definiert.
 errors.command_required_argument_missing.title=Erforderliches Argument fehlt
-errors.command_required_argument_missing.description=Das Argument `?0` ist für den Befehl `?1` erforderlich.
+errors.command_required_argument_missing.description=Das Argument `$0` ist für den Befehl `$1` erforderlich.
 errors.subcommand_required_argument_missing.title=Erforderliches Argument fehlt
-errors.subcommand_required_argument_missing.description=Das Argument `?0` ist für den Unterbefehl `?1` des Befehls `?2` erforderlich.
+errors.subcommand_required_argument_missing.description=Das Argument `$0` ist für den Unterbefehl `$1` des Befehls `$2` erforderlich.
 errors.command_argument_invalid_type.title=Ungültiger Argumenttyp
-errors.command_argument_invalid_type.description=Das Argument `?0` des Befehls `?1` muss vom Typ [`?2`](https://discord.com/channels/?3/?4 \\"?5\\") sein.
+errors.command_argument_invalid_type.description=Das Argument `$0` des Befehls `$1` muss vom Typ [`$2`](https://discord.com/channels/$3/$4 "$5") sein.
 errors.subcommand_argument_invalid_type.title=Ungültiger Argumenttyp
-errors.subcommand_argument_invalid_type.description=Das Argument `?0` des Unterbefehls `?1` des Befehls `?2` muss vom Typ [`?3`](https://discord.com/channels/?4/?5 \\"?6\\") sein.
+errors.subcommand_argument_invalid_type.description=Das Argument `$0` des Unterbefehls `$1` des Befehls `$2` muss vom Typ [`$3`](https://discord.com/channels/$4/$5 "$6") sein.
 # ---------------
 
 # === Commands / Argument Descriptions ===
@@ -61,6 +61,6 @@ command.arguments.type.integer.tooltip=Eine ganze Zahl (z.B. -2, -1, 0, 1, 2, ..
 command.arguments.type.string=String
 command.arguments.type.string.tooltip=Ein Text (z.B. "Hallo Welt!").
 command.arguments.type.choice=Auswahl
-command.arguments.type.choice.tooltip=Eine Auswahl aus einer Liste von Optionen. Führe "!help command ?0" aus, um die verfügbaren Optionen zu sehen.
+command.arguments.type.choice.tooltip=Eine Auswahl aus einer Liste von Optionen. Führe "!help command $0" aus, um die verfügbaren Optionen zu sehen.
 
 # ---------------
