Removed all the argument parsing and validation in preparation of #18

--- a/src/main/resources/StringsResources_en.properties
+++ b/src/main/resources/StringsResources_en.properties
@@ -1,3 +1,4 @@
+# suppress inspection "InconsistentResourceBundle" for whole file
 # === Errors ===
 errors.special.similar_command=Did you mean `$0`?\u0020
 
@@ -86,6 +87,6 @@ command.arguments.type.string=String
 command.arguments.type.string.tooltip=A text (e.g. "Hello World!").
 
 command.arguments.type.choice=Choice
-command.arguments.type.choice.tooltip=A choice from a list of options. Run "!help command $0" to see the available options."
+command.arguments.type.choice.tooltip=A choice from a list of options. Run "!help command $0" to see the available options.
 
 # ---------------
