Added support for exceptions on error when parsing command arguments

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -53,11 +53,12 @@ errors.command_required_argument_missing.description=Das Argument `$0` ist für d
 errors.subcommand_required_argument_missing.title=Erforderliches Argument fehlt
 errors.subcommand_required_argument_missing.description=Das Argument `$0` ist für den Unterbefehl `$1` des Befehls `$2` erforderlich.
 
-errors.command_argument_invalid_type.title=Ungültiger Argumenttyp
-errors.command_argument_invalid_type.description=Das Argument `$0` des Befehls `$1` muss vom Typ [`$2`](https://discord.com/channels/$3/$4 "$5") sein.
-
-errors.subcommand_argument_invalid_type.title=Ungültiger Argumenttyp
-errors.subcommand_argument_invalid_type.description=Das Argument `$0` des Unterbefehls `$1` des Befehls `$2` muss vom Typ [`$3`](https://discord.com/channels/$4/$5 "$6") sein.
+errors.command_argument_parsing_report.fields.title=Argument `$0`
+errors.command_argument_parsing_report.fields.reason.invalid_type=Das Argument `$0` muss vom Typ `[$1](https://discordapp.com/channels/$2/$3 "$4")` sein.
+errors.command_argument_parsing_report.fields.reason.integer.too_small=Das Argument `$0` muss größer oder gleich als `$1` sein.
+errors.command_argument_parsing_report.fields.reason.integer.too_big=Das Argument `$0` muss kleiner oder gleich als `$1` sein.
+errors.command_argument_parsing_report.fields.reason.string.too_short=Das Argument `$0` muss mindestens `$1` Zeichen lang sein.
+errors.command_argument_parsing_report.fields.reason.string.too_long=Das Argument `$0` darf maximal `$1` Zeichen lang sein.
 
 # ---------------
 
