Added argument validation to integer data type and improved the parser, so it actually parses all edge cases.

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -54,11 +54,12 @@ errors.subcommand_required_argument_missing.title=Erforderliches Argument fehlt
 errors.subcommand_required_argument_missing.description=Das Argument `$0` ist für den Unterbefehl `$1` des Befehls `$2` erforderlich.
 
 errors.command_argument_parsing_report.fields.title=Argument `$0`
-errors.command_argument_parsing_report.fields.reason.invalid_type=Das Argument `$0` muss vom Typ `[$1](https://discordapp.com/channels/$2/$3 "$4")` sein.
-errors.command_argument_parsing_report.fields.reason.integer.too_small=Das Argument `$0` muss größer oder gleich als `$1` sein.
-errors.command_argument_parsing_report.fields.reason.integer.too_big=Das Argument `$0` muss kleiner oder gleich als `$1` sein.
-errors.command_argument_parsing_report.fields.reason.string.too_short=Das Argument `$0` muss mindestens `$1` Zeichen lang sein.
-errors.command_argument_parsing_report.fields.reason.string.too_long=Das Argument `$0` darf maximal `$1` Zeichen lang sein.
+errors.command_argument_parsing_report.fields.reason.invalid_type=Dieses Argument muss vom Typ [`$0`](https://discordapp.com/channels/$1/$2 "$3") sein.
+errors.command_argument_parsing_report.fields.reason.no_value=Dieses Argument benötigt einen Wert.
+errors.command_argument_parsing_report.fields.reason.integer.too_small=Dieses Argument muss größer oder gleich als `$0` sein.
+errors.command_argument_parsing_report.fields.reason.integer.too_big=Dieses Argument muss kleiner oder gleich als `$0` sein.
+errors.command_argument_parsing_report.fields.reason.string.too_short=Dieses Argument muss mindestens `$0` Zeichen lang sein.
+errors.command_argument_parsing_report.fields.reason.string.too_long=Dieses Argument darf maximal `$0` Zeichen lang sein.
 
 # ---------------
 
