Refactored the data validation a bit and added choice validation

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -60,6 +60,7 @@ errors.command_argument_parsing_report.fields.reason.integer.too_small=Dieses Ar
 errors.command_argument_parsing_report.fields.reason.integer.too_big=Dieses Argument muss kleiner oder gleich als `$0` sein.
 errors.command_argument_parsing_report.fields.reason.string.too_short=Dieses Argument muss mindestens `$0` Zeichen lang sein.
 errors.command_argument_parsing_report.fields.reason.string.too_long=Dieses Argument darf maximal `$0` Zeichen lang sein.
+errors.command_argument_parsing_report.fields.reason.choice.invalid_option=Dieses Argument ist eine [`$0`](https://discordapp.com/channels/$1/$2 "$3") und muss einen der folgenden Werte enthalten:\n$4
 
 # ---------------
 
