Shutdown command implemented!

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -78,6 +78,9 @@ commands.refresh_welcome.argument.language.description=Die Sprache der Willkomme
 commands.refresh_rules.description=Aktualisiert die Regeln.
 commands.refresh_rules.argument.language.description=Die Sprache der Regeln, die aktualisiert werden soll.
 
+commands.shutdown.description=Fährt den Bot mit viel Liebe herunter.
+commands.shutdown.argument.delay.description=Die Zeit in Sekunden, die der Bot warten soll, bevor er heruntergefahren wird.
+
 # ---------------
 
 # === Command Argument Types ===
