--- a/src/main/resources/StringsResources_en.properties
+++ b/src/main/resources/StringsResources_en.properties
@@ -79,6 +79,9 @@ commands.refresh_welcome.argument.language.description=The language of the welco
 commands.refresh_rules.description=Refreshes the rules messages.
 commands.refresh_rules.argument.language.description=The language of the rules message to refresh.
 
+commands.shutdown.description=Peacefully shuts down the bot.
+commands.shutdown.argument.delay.description=The delay in seconds until the bot shuts down.
+
 # ---------------
 
 # === Command Argument Types ===
