Added a restart command to restart the bot

--- a/src/main/resources/StringsResources_en.properties
+++ b/src/main/resources/StringsResources_en.properties
@@ -82,6 +82,9 @@ commands.refresh_rules.argument.language.description=The language of the rules m
 commands.shutdown.description=Peacefully shuts down the bot.
 commands.shutdown.argument.delay.description=The delay in seconds until the bot shuts down.
 
+commands.restart.description=Restarts the bot.
+commands.restart.argument.delay.description=The delay in seconds until the bot restarts.
+
 # ---------------
 
 # === Command Argument Types ===
