--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -81,6 +81,9 @@ commands.refresh_rules.argument.language.description=Die Sprache der Regeln, die
 commands.shutdown.description=Fährt den Bot mit viel Liebe herunter.
 commands.shutdown.argument.delay.description=Die Zeit in Sekunden, die der Bot warten soll, bevor er heruntergefahren wird.
 
+commands.restart.description=Startet den Bot neu.
+commands.restart.argument.delay.description=Die Zeit in Sekunden, die der Bot warten soll, bevor er neu gestartet wird.
+
 # ---------------
 
 # === Command Argument Types ===
