Added main functionality for paginating messages and added the list command, currently without any reaction buttons, because these will get replaced with components

--- a/src/main/resources/StringsResources_en.properties
+++ b/src/main/resources/StringsResources_en.properties
@@ -53,7 +53,6 @@ errors.command_required_argument_missing.description=The argument `$0` is requir
 errors.subcommand_required_argument_missing.title=Required argument missing
 errors.subcommand_required_argument_missing.description=The argument `$0` is required for subcommand `$1` of command `$2`.
 
-errors.command_argument_parsing_report.fields.title=Argument `$0`
 errors.command_argument_parsing_report.fields.reason.invalid_type=This argument must be of type [`$0`](https://discordapp.com/channels/$1/$2 "$3").
 errors.command_argument_parsing_report.fields.reason.no_value=This argument requires a value.
 errors.command_argument_parsing_report.fields.reason.integer.too_small=This argument must be greater than or equal to `$0`.
@@ -61,6 +60,9 @@ errors.command_argument_parsing_report.fields.reason.integer.too_big=This argume
 errors.command_argument_parsing_report.fields.reason.string.too_short=This argument must be at least `$0` characters long.
 errors.command_argument_parsing_report.fields.reason.string.too_long=This argument must be at most `$0` characters long.
 errors.command_argument_parsing_report.fields.reason.choice.invalid_option=This argument is a [`$0`](https://discordapp.com/channels/$1/$2 "$3") and must be one of the following options:\n$4
+
+errors.command.list.page_not_found.title=Page not found
+errors.command.list.page_not_found.description=The page `$0` does not exist. Use `!list` to get a list of all commands and use the arrow reactions to navigate between pages.
 
 # ---------------
 
@@ -99,3 +101,11 @@ command.arguments.type.choice=Choice
 command.arguments.type.choice.tooltip=A choice from a list of options. Run "!help command $0" to see the available options.
 
 # ---------------
+
+# === Button Labels ===
+
+buttons.paginated.previous=Previous
+buttons.paginated.next=Next
+buttons.paginated.close=Close
+
+# ----------------
