--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -53,7 +53,6 @@ errors.command_required_argument_missing.description=Das Argument `$0` ist für d
 errors.subcommand_required_argument_missing.title=Erforderliches Argument fehlt
 errors.subcommand_required_argument_missing.description=Das Argument `$0` ist für den Unterbefehl `$1` des Befehls `$2` erforderlich.
 
-errors.command_argument_parsing_report.fields.title=Argument `$0`
 errors.command_argument_parsing_report.fields.reason.invalid_type=Dieses Argument muss vom Typ [`$0`](https://discordapp.com/channels/$1/$2 "$3") sein.
 errors.command_argument_parsing_report.fields.reason.no_value=Dieses Argument benötigt einen Wert.
 errors.command_argument_parsing_report.fields.reason.integer.too_small=Dieses Argument muss größer oder gleich als `$0` sein.
@@ -61,6 +60,9 @@ errors.command_argument_parsing_report.fields.reason.integer.too_big=Dieses Argu
 errors.command_argument_parsing_report.fields.reason.string.too_short=Dieses Argument muss mindestens `$0` Zeichen lang sein.
 errors.command_argument_parsing_report.fields.reason.string.too_long=Dieses Argument darf maximal `$0` Zeichen lang sein.
 errors.command_argument_parsing_report.fields.reason.choice.invalid_option=Dieses Argument ist eine [`$0`](https://discordapp.com/channels/$1/$2 "$3") und muss einen der folgenden Werte enthalten:\n$4
+
+errors.command.list.page_not_found.title=Seite nicht gefunden
+errors.command.list.page_not_found.description=Die Seite `$0` existiert nicht. Benutze den Befehl `!list` um eine Liste von allen Befehlen zu erhalten und benutze die Pfeile, um zwischen den Seiten zu wechseln.
 
 # ---------------
 
@@ -98,3 +100,11 @@ command.arguments.type.choice=Auswahl
 command.arguments.type.choice.tooltip=Eine Auswahl aus einer Liste von Optionen. Führe "!help command $0" aus, um die verfügbaren Optionen zu sehen.
 
 # ---------------
+
+# === Button Labels ===
+
+buttons.paginated.previous=Zurück
+buttons.paginated.next=Weiter
+buttons.paginated.close=Schließen
+
+# ----------------
