Added improved error messages for giving too many arguments and removed some clutter from them

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -30,10 +30,14 @@ errors.command_arguments_invalid_order.title=Ungültige Argumentenreihenfolge
 errors.command_arguments_invalid_order.description=Argumente, die als Schlüssel-Wert-Paar übergeben werden, müssen entweder ausschließlich oder am Ende jeder Argumentliste übergeben werden.
 
 errors.command_arguments_too_many.title=Zu viele Argumente
-errors.command_arguments_too_many.description=Der Befehl `$0` akzeptiert nicht mehr als $1 Argumente.
+errors.command_arguments_too_many.description=Der Befehl `$0` akzeptiert nicht mehr als $1 Argument(e).
+errors.command_arguments_too_many_none.title=Too many arguments
+errors.command_arguments_too_many_none.description=Der Befehl `$0` akzeptiert keine Argumente.
 
 errors.subcommand_arguments_too_many.title=Zu viele Argumente
-errors.subcommand_arguments_too_many.description=Der Unterbefehl `$0` des Befehls `$1` akzeptiert nicht mehr als $2 Argumente.
+errors.subcommand_arguments_too_many.description=Der Unterbefehl `$0` des Befehls `$1` akzeptiert nicht mehr als $2 Argument(e).
+errors.subcommand_arguments_too_many_none.title=Zu viele Argumente
+errors.subcommand_arguments_too_many_none.description=Der Unterbefehl `$0` des Befehls `$1` akzeptiert keine Argumente.
 
 errors.command_unknown_argument.title=Unbekanntes Argument
 errors.command_unknown_argument.description=Das Argument `$0` existiert für den Befehl `$1` nicht.
