Started beginning on help command and added some messsages to the bot config

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -67,8 +67,8 @@ errors.command.list.page_not_found.description=Die Seite `$0` existiert nicht. B
 # ---------------
 
 # === Commands / Argument Descriptions ===
-commands.list.description=Listet alle Befehle auf. Nutze `!help command <command>` um mehr Informationen über einen bestimmten Befehl zu erhalten.
-commands.list.argument.page.description=Der Befehl list ist paginiert. Dieses Argument gibt an, welche Seite angezeigt werden soll.
+commands.list.description=Listet alle verfügbaren Befehle, inklusive ihrer Beschreibung auf.
+commands.list.argument.page.description=Der Befehl list ist in mehrere Seiten aufgeteilt. Dieses Argument gibt an, welche Seite angezeigt werden soll.
 
 commands.help.description=Zeigt eine Hilfeseite für einen Befehl/Funktion dieses Bots oder Informationen über das ACSP und diesen Bot.
 commands.help.subcommand.command.description=Zeigt eine Hilfeseite für einen Befehl dieses Bots.
