--- a/src/main/resources/StringsResources_en.properties
+++ b/src/main/resources/StringsResources_en.properties
@@ -68,7 +68,7 @@ errors.command.list.page_not_found.description=The page `$0` does not exist. Use
 
 # === Commands / Argument Descriptions ===
 
-commands.list.description=Lists all commands. Use `!help command <command>` to get more information about a specific command.
+commands.list.description=Lists all available commands, including their description.
 commands.list.argument.page.description=The list command is paginated. This argument specifies the page to show.
 
 commands.help.description=Shows a help page for a command/feature of this bot or info about the ACSP and this bot.
