Working help messages implemented. Sadly arguments for subcommands cannot be made because no input from the user is possible for now.

--- a/src/main/resources/StringsResources_de.properties
+++ b/src/main/resources/StringsResources_de.properties
@@ -68,6 +68,9 @@ errors.command_argument_parsing_report.fields.reason.choice.invalid_option=Diese
 errors.command.list.page_not_found.title=Seite nicht gefunden
 errors.command.list.page_not_found.description=Die Seite `$0` existiert nicht. Benutze den Befehl `!list` um eine Liste von allen Befehlen zu erhalten und benutze die Pfeile, um zwischen den Seiten zu wechseln.
 
+errors.command.help.command_not_found.title=Befehl nicht gefunden
+errors.command.help.command_not_found.description=Der Befehl `$0` existiert nicht. Benutze den Befehl `!list` um eine Liste von allen Befehlen zu erhalten.
+
 # ---------------
 
 # === Commands / Argument Descriptions ===
@@ -111,4 +114,26 @@ buttons.paginated.previous=Zurück
 buttons.paginated.next=Weiter
 buttons.paginated.close=Schließen
 
+buttons.command.help.arguments=Zeige Argumente
+buttons.command.help.subcommands=Zeige Unterbefehle
+buttons.command.help.close=Schließen
+buttons.command.help.back=Zurück
+
 # ----------------
+
+# === Other Command Related Strings ===
+
+command.help.command.no_arguments=Dieser Befehl hat keine Argumente.
+command.help.command.no_subcommands=Dieser Befehl hat keine Unterbefehle.
+command.help.command.argument.type_line=**Typ:** [`$0`](https://discordapp.com/channels/$1/$2 "$3")
+command.help.command.argument.optional_line=**Optional:** $0
+command.help.command.argument.default_line=**Standardwert:** $0
+
+# ---------------
+
+# === General Strings ===
+
+general.yes=Ja
+general.no=Nein
+
+# ---------------
