--- a/src/main/resources/StringsResources_en.properties
+++ b/src/main/resources/StringsResources_en.properties
@@ -68,6 +68,9 @@ errors.command_argument_parsing_report.fields.reason.choice.invalid_option=This 
 errors.command.list.page_not_found.title=Page not found
 errors.command.list.page_not_found.description=The page `$0` does not exist. Use `!list` to get a list of all commands and use the arrow reactions to navigate between pages.
 
+errors.command.help.command_not_found.title=Command not found
+errors.command.help.command_not_found.description=The command `$0` does not exist. Use `!list` to get a list of all commands.
+
 # ---------------
 
 # === Commands / Argument Descriptions ===
@@ -112,4 +115,26 @@ buttons.paginated.previous=Previous
 buttons.paginated.next=Next
 buttons.paginated.close=Close
 
+buttons.command.help.arguments=Show Arguments
+buttons.command.help.subcommands=Show Subcommands
+buttons.command.help.close=Close
+buttons.command.help.back=Back
+
 # ----------------
+
+# === Other Command Related Strings ===
+
+command.help.command.no_arguments=This command does not have any arguments.
+command.help.command.no_subcommands=This command does not have any subcommands.
+command.help.command.argument.type_line=**Type:** [`$0`](https://discordapp.com/channels/$1/$2 "$3")
+command.help.command.argument.optional_line=**Optional:** $0
+command.help.command.argument.default_line=**Defaults to:** $0
+
+# ---------------
+
+# === General Strings ===
+
+general.yes=Yes
+general.no=No
+
+# ---------------
